<resources>
    <string name="app_name">FICHAR</string>
    <string name="USUARIO">USUARIO</string>
    <string name="CONTRASEÑA">CONTRASEÑA</string>
    <string name="DIRECCION">DIRECCION</string>
    <string name="CLIENTE">SELECCIONE CLIENTE</string>
    <string name="GPS">GPS</string>
    <string name="FIN">fin de fichaje</string>
    <string name="HORA">HORA</string>
    <string name="FECHA">FECHA</string>
    <string name="CONFIGURAR">CONFIGURAR</string>
    <string name="fichar_ini">INICIO DE FICHAJE</string>
    <string name="clientes">CLIENTES</string>
    <string name="NOVALIDO">Falta el nombre de usuario y/o Contraseña</string>
    <string name="ESCRIBA">ESCRIBA SU NOMBRE</string>
    <string name="FICHAR">FICHAR</string>
    <string name="BORRAR">BORRAR</string>
    <string name="FIRMAR_MSJ">FIRME POR FAVOR</string>
    <string name="SERVICIO">EULEN SERVICIOS AUXILIARES</string>
    <string name="TIENE">Tiene: </string>
    <string name="segundos"> Segundos para firmar</string>
    <string name="entrada">Fichaje Entrada: </string>
    <string name="alas"> a las </string>
    <string name="LOCALIZACION">Espere, buscando señal GPS....</string>
    <string name="GPSACTIVADO">GPS ACTIVADO</string>
    <string name="GPSDESACTIVADO">GPS DESACTIVADO</string>
    <string name="botonGPS">GPS activacion</string>
    <string name="LOGIN">PARA FICHAR ES NECESARIO USUARIO Y CONTRASEÑA</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="ESPERE">ESPERE AL GPS</string>
    <string name="Version">Version: 2</string>
    <string name="AÑADIR">+</string>
    <string name="ANTERIOR">CONTRASEÑA ANTERIOR</string>
    <string name="boton_para_a_adir_usuarios_o_modificarlos">boton para añadir usuarios o modificarlos</string>
</resources>