<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Azul_gris"
    android:onClick="Boton_Importar"
    tools:context=".PRINCIPAL">

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/boton_redondo_naranja"
        android:contentDescription="@string/FICHAR"
        android:onClick="Boton_iniciar_fichaje"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fichar" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/boton_redondo_rojopalido"
        android:contentDescription="@string/FIN"
        android:onClick="Boton_Finalizar_fichajes"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/salir" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/CONFIGURAR"
        android:onClick="Boton_Importar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/configuration" />

    <TextView
        android:id="@+id/txt_direccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/ESPERE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>