<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Azul_gris">

            <TextView
                android:id="@+id/CARD_FECHA"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rectangle"
                android:gravity="center"
                android:hint="@string/FECHA"
                android:includeFontPadding="true"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintBottom_toBottomOf="@+id/CARD_HE"
                app:layout_constraintEnd_toStartOf="@+id/CARD_HE"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/CARD_HE" />

            <TextView
                android:id="@+id/CARD_HE"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rectangle"
                android:gravity="center"
                android:hint="@string/HORA"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintBottom_toTopOf="@+id/CARD_COMODIN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/CARD_FECHA"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/CARD_COMODIN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/rectangle"
                android:gravity="center"
                android:hint="@string/USUARIO"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/CARD_CLIENTE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CARD_HE" />

            <TextView
                android:id="@+id/CARD_CLIENTE"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rectangle"
                android:gravity="center"
                android:hint="@string/CLIENTE"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CARD_COMODIN" />

            <TextView
                android:id="@+id/CARD_Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CARD_COMODIN" />

            <TextView
                android:id="@+id/CARD_COORDENADAS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CARD_FECHA" />

            <TextView
                android:id="@+id/CARD_DIRECCION"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CARD_COMODIN" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>